Fixed image size and alignment of testimonial section

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -2,13 +2,8 @@
     max-width: 75%;
 }
 
-.card {
-    width: 50%;
-}
-
-.clientimg {
-    width: 50%;
-    height: auto;
+.feedbackcards {
+    max-width: 40rem;
 }
 
 .card-title {
